--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,37 +10,23 @@ on:
 
 jobs:
   test:
+    name: python
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
 
-    - name: Install uv
-      run: |
-        pip install uv
+      - name: Set up Python
+        run: uv python install
 
-    - name: Create virtual environment
-      run: |
-        uv venv
-        . .venv/bin/activate
+      - name: Install the project
+        run: uv sync --all-extras --dev
 
-    - name: Install dependencies and project
-      run: |
-        uv pip install --system .
-        uv pip install pytest
-
-    - name: Run pytest
-      run: |
-        . .venv/bin/activate
-        pytest .
+      - name: Run tests
+        run: uv run pytest tests
 
   build-and-publish:
     needs: test
