--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -12,6 +12,10 @@ jobs:
   test:
     name: python
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [ '3.8', '3.9', '3.10', '3.11', '3.12' ]
+      fail-fast: false
 
     steps:
       - uses: actions/checkout@v4
