--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -52,6 +52,8 @@ jobs:
 
       - name: Publish to PyPI
         if: github.event_name == 'release'
-        run: |
+        env:
+          UV_PUBLISH_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+        run:
           uv build
           uv publish
